Added temporary fix to file upload in Safari. But is still inconsistent.